--- a/config/proxy.conf
+++ b/config/proxy.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
-    server_name melissawraxall.com;
+    server_name www.example.com example.com;
 
     location /app {
-       proxy_pass http://127.0.0.1:7500;
+       proxy_pass http://127.0.0.1:8080;
     }
 }
