--- a/config/proxy.conf
+++ b/config/proxy.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     server_name www.example.com example.com;
 
-    location /app {
-       proxy_pass http://127.0.0.1:8080;
+    location /contactform {
+       proxy_pass http://127.0.0.1:7500;
     }
 }
